# palaura

./: .gitignore  .travis.yml  AUTHORS  README.md  meson.build
data/: com.github.lainsce.palaura.appdata.xml  com.github.lainsce.palaura.appdata.xml.in  com.github.lainsce.palaura.desktop  com.github.lainsce.palaura.gschema.xml  com.github.lainsce.paraula.desktop  com.github.lainsce.paraula.gschema.xml  meson.build  style.gresource.xml  stylesheet.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  README.md  com.github.lainsce.palaura.pot  com.github.lainsce.paraula.pot  fr.po  meson.build  nl_NL.po
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  BookmarkRow.vala  MainWindow.vala  RecentsRow.vala
src/Constants/: AppSettings.vala  Stylesheet.vala
src/Core/: Definition.vala  DictCore.vala  MyJsonReader.vala  PearsonApiClient.vala
src/Views/: DefinitionView.vala  NormalView.vala  SearchView.vala  View.vala  WordListView.vala
src/Widgets/: Preferences.vala  WordContainerGrid.vala  WordListRow.vala
